# python_projects

./: README.md  gitconflict.txt
assignment1/: friendly_greeting.txt  gitconflict.txt  less_friendly_greeting.txt
assignment2/: README.md  array_class.py  prints.py  test_array.py
assignment3/: README.md  pyproject.toml  timing-report.txt
assignment3/__MACOSX/assignment3/: ._pyproject.toml
assignment3/instapy/: cli.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
assignment3/test/: conftest.py  test_numba.py  test_numpy.py  test_python.py
assignment4/: README.md  collect_dates.py  fetch_player_statistics.py  filter_urls.py  requesting_urls.py  requirements.txt  time_planner.py  wiki_race_challenge.py
